compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__duplicate_param@duplicate.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn foo(x: Int32, x: Int32) { }"
---
× error[LM3030]: duplicate parameter
   ╭───────────
 1 │ fn foo(x: Int32, x: Int32) { }
   │                  ^^^^^^^^ parameter x is already defined
   ∶ 
 1 │ fn foo(x: Int32, x: Int32) { }
   │        ^ original parameter found here
   ╰──
